Se corrigieron los colores de los frames por Diego Artavia, se separaron los archivos y se crearon las calificaciones

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Proyecto_Final_-_Canvas_-_IngRS
-main.class=proyecto.pkgfinal.canvas.ingrs.ProyectoFinalCanvasIngRS
+main.class=General.ProyectoFinalCanvasIngRS
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
