Se terminaron las HU Asignaciones estudiantes, grupos estudiante y asistencias Ademas de refinar algunos detalles de los frames de estudiante

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Proyecto_Final_-_Canvas_-_IngRS
-main.class=General.ProyectoFinalCanvasIngRS
+main.class=Pantallas.LogIn.LogIn
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
